# browser_launcher

./: .env.test  .gitignore  ALLURE_SETUP_VERIFIED.md  CHANGELOG.md  LICENSE  Poetry.md  README.md  mise.toml  pyproject.toml  pytest.ini  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: plan-allCookiesToClipboard.prompt.md  plan-allCookiesToClipboardActual.prompt.md  plan-allure-matrix.prompt.md  plan-allureGroupingImplementationChecklist.prompt.md  plan-authModule.prompt.md  plan-cookieManagementModule.prompt.md  plan-improvingTestExecutionAndCodecovReportingGranularity.prompt.md  plan-integratingAllureReportingAndEnhancingPytestExecution.prompt.md
.github/workflows/: ci.yml  test-allure.yml
docs/: EXTRA_OPTIONS_DESIGN.md  Roo.md  TESTING_GUIDE.md
examples/: __init__.py
examples/auth_modules/: __init__.py  form_auth.py
plans/: IMPLEMENTATION_PLAN.md  auth_plan.md  factory_pattern.md
scripts/: simulate_test_sequence.sh
src/browser_launcher/: __init__.py  __main__.py  cli.py  config.py  cookies.py  cookies_flowchart.md  logger.py  screenshot.py  utils.py
src/browser_launcher/assets/: default_config.toml
src/browser_launcher/auth/: __init__.py  base.py  config.py  dummy.py  exceptions.py  factory.py  result.py  retry.py
src/browser_launcher/browsers/: __init__.py  base.py  chrome.py  edge.py  factory.py  firefox.py  safari.py
tests/: conftest.py  test_cli_clean.py  test_cli_cookie_args.py  test_cli_init.py  test_cli_launch.py  test_config.py  test_cookies.py  test_launch.py  test_logger.py  test_screenshot.py  test_utils.py
tests/browsers/: test_base.py  test_browser.py  test_chrome.py  test_factory.py  test_firefox.py  test_safari.py  test_safari_edge.py
tests/smoke/: test_auth_integration.py  test_cli_cookie_args.py
tests/smoke/browsers/: test_chrome.py  test_edge.py  test_firefox.py  test_safari.py
tests/unit/: test_auth_config.py  test_auth_dummy.py  test_auth_factory.py  test_auth_retry.py  test_cli_auth.py  test_cli_clean.py  test_cli_cookie_dump.py  test_cli_cookie_export.py  test_cli_init.py  test_cli_launch.py  test_config.py  test_config_cookie_rules.py  test_conftest_allure_matrix_metadata.py  test_cookies.py  test_cookies_config_dict.py  test_form_auth.py  test_screenshot.py  test_utils.py
tests/unit/browsers/: test_base.py  test_browser.py  test_factory.py
