[tool.poetry]
name = "browser_launcher"
version = "0.1.0"
description = "A small Python project to launch browsers (placeholder)."
authors = ["Ramon Alcantara Arceo <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "browser_launcher", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
browser-launcher = "browser_launcher.__main__:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
