[tool.poetry]
name = "browser_launcher"
version = "0.1.0"
description = "A small Python project to launch browsers (placeholder)."
authors = ["Ramon Alcantara Arceo <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "browser_launcher", from = "src" }]

# Include asset files
include = [
	{ path = "src/browser_launcher/assets/default_config.toml" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.20.0"
rich = "^14.2.0"
selenium = "^4.40.0"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
tomli-w = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
mypy = "^1.19.1"

[tool.poetry.scripts]
browser-launcher = "browser_launcher.__main__:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]
ignore = []

# Mypy configuration
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
show_error_codes = true
check_untyped_defs = true
